RESOLVED FIXED296104
[Navigation API] NavigateEvent.intercept() doesn't handle exception correctly in its handler().
https://bugs.webkit.org/show_bug.cgi?id=296104
Summary [Navigation API] NavigateEvent.intercept() doesn't handle exception correctly...
Basuke Suzuki
Reported 2025-07-16 17:42:26 PDT
If exception happens, it will be caught by unhandled rejection handler.
Attachments
Basuke Suzuki
Comment 1 2025-07-16 17:42:40 PDT
Basuke Suzuki
Comment 2 2025-07-16 17:51:28 PDT
EWS
Comment 3 2025-07-22 11:23:54 PDT
Committed 297745@main (81e80d31ecc2): <https://commits.webkit.org/297745@main> Reviewed commits have been landed. Closing PR #48162 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.