[Navigation API] NavigateEvent.intercept() doesn't handle exception correctly in its handler(). https://bugs.webkit.org/show_bug.cgi?id=296104 rdar://156007630

Reviewed by Chris Dumez.

If exception happens, it will be caught by unhandled rejection handler.

Change CodeGeneratorJS.pm to use rejectAsHandled() instead of reject()
when callback functions throw exceptions. This prevents spurious
"unhandled promise rejection" console warnings for framework-managed
promise rejections in Navigation API, Web Locks API, and View
Transitions API.

* LayoutTests/platform/wk2/TestExpectations:
* Source/WebCore/bindings/scripts/CodeGeneratorJS.pm:
(GenerateCallbackImplementationOperationBody):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackInterface.cpp:
(WebCore::JSTestCallbackInterface::callbackThatTreatsExceptionAsRejectedPromise):
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::innerDispatchNavigateEvent):

Canonical link: https://commits.webkit.org/297745@main